compiler/tests/fixtures/negative/error_sema_arith_mismatch.sol
// E1006: arithmetic operands have mismatched types (int vs float).
function start() -> int {
    return 5 + 3.0;
}
